[gd_scene load_steps=25 format=3 uid="uid://cppa17k45xkyw"]

[ext_resource type="PackedScene" uid="uid://byy0nyaw6gtki" path="res://Objects/Room_objects/objMusicPlayer.tscn" id="1_6xp2a"]
[ext_resource type="Script" path="res://Rooms/rNeosStage03.gd" id="1_u1to0"]
[ext_resource type="PackedScene" uid="uid://yab7pya0yr1j" path="res://Objects/Room_objects/objCameraFixed.tscn" id="2_i85l1"]
[ext_resource type="PackedScene" uid="uid://nc5enh8swv78" path="res://Objects/Backgrounds/objBackgroundColor.tscn" id="3_aq1rn"]
[ext_resource type="PackedScene" uid="uid://bp5rqk4l7tesk" path="res://Objects/Player/objPlayer.tscn" id="4_6ebyk"]
[ext_resource type="PackedScene" uid="uid://bm40t36a6m8sc" path="res://Objects/Tiles/til32x32.tscn" id="5_qw46x"]
[ext_resource type="PackedScene" uid="uid://bes18loo3v73l" path="res://Objects/Room_objects/objSaveBlocker.tscn" id="7_8iwgr"]
[ext_resource type="Texture2D" uid="uid://ppob1kaec3x8" path="res://Graphics/Neos/Mario/mario.png" id="7_qjd0l"]
[ext_resource type="Texture2D" uid="uid://cc7r8rlbk5qib" path="res://Graphics/Neos/Mario/wiiu_pipe.png" id="8_no0qn"]
[ext_resource type="AudioStream" uid="uid://chbxtwkk5ib0s" path="res://Graphics/Neos/Mario/Mario Warp Pipe Sound Effect.wav" id="9_nn47s"]
[ext_resource type="PackedScene" uid="uid://disuddxn6h6vm" path="res://Objects/Hazards/tilSpikes.tscn" id="10_b0wgw"]
[ext_resource type="PackedScene" uid="uid://b31w5fm4w5857" path="res://Objects/Room_objects/objSavePoint.tscn" id="11_tnmim"]
[ext_resource type="AudioStream" uid="uid://cf1jpuec6gywr" path="res://Graphics/Neos/Mario/Mario disappears meme.wav" id="12_l5gpi"]
[ext_resource type="PackedScene" uid="uid://035mv16jo7nf" path="res://Objects/Room_objects/objWarpNextStage.tscn" id="13_hhmne"]
[ext_resource type="PackedScene" uid="uid://da1qaif83tf17" path="res://Objects/Trigger_system/objTrigger.tscn" id="15_ldk0h"]

[sub_resource type="Animation" id="Animation_jxe8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TilesGo_Up_Down:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_slkap"]
resource_name = "up_down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TilesGo_Up_Down:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 128), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_witi7"]
_data = {
"RESET": SubResource("Animation_jxe8r"),
"up_down": SubResource("Animation_slkap")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_axrny"]
size = Vector2(127.859, 242.932)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ihoti"]
size = Vector2(96, 104)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k5bm6"]
size = Vector2(784, 592)

[sub_resource type="Animation" id="Animation_j5ql5"]
resource_name = "MarioGoing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mario:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -80), Vector2(0, 24), Vector2(0, -80)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"mario_pipe_sound"
}, {
"args": [],
"method": &"mario_pipe_sound"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -92), Vector2(0, 16), Vector2(0, -92)]
}

[sub_resource type="Animation" id="Animation_n5upu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Mario:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -80)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -92)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_injlh"]
_data = {
"MarioGoing": SubResource("Animation_j5ql5"),
"RESET": SubResource("Animation_n5upu")
}

[node name="rLevel3" type="Node2D"]
script = ExtResource("1_u1to0")

[node name="Environment" type="Node2D" parent="."]

[node name="objMusicPlayer" parent="Environment" instance=ExtResource("1_6xp2a")]
position = Vector2(-16, 16)

[node name="BackgroundSetup" type="Node" parent="Environment"]

[node name="CanvasLayer" type="CanvasLayer" parent="Environment/BackgroundSetup"]
layer = -10

[node name="objBackgroundColor" parent="Environment/BackgroundSetup/CanvasLayer" instance=ExtResource("3_aq1rn")]
offset_right = 800.0
offset_bottom = 608.0
color = Color(0.457378, 0.813433, 0.527857, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="Environment/BackgroundSetup"]
visible = false
offset = Vector2(800, 0)
transform = Transform2D(1, 0, 0, 1, 800, 0)

[node name="ParallaxLayer" type="ParallaxLayer" parent="Environment/BackgroundSetup/ParallaxBackground"]
motion_mirroring = Vector2(800, 608)

[node name="Polygon2D" type="Polygon2D" parent="Environment/BackgroundSetup/ParallaxBackground/ParallaxLayer"]
color = Color(1, 1, 0.486275, 1)
invert_enabled = true
invert_border = 8.0
polygon = PackedVector2Array(8, 600, 792, 600, 792, 8, 8, 8)

[node name="WarpTrollText" type="Label" parent="Environment"]
offset_left = 296.0
offset_top = 16.0
offset_right = 488.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Welcome"
horizontal_alignment = 1

[node name="Room_related" type="Node2D" parent="."]

[node name="objPlayer" parent="Room_related" instance=ExtResource("4_6ebyk")]
position = Vector2(64, 104)

[node name="objCameraFixed" parent="Room_related" node_paths=PackedStringArray("target_node") instance=ExtResource("2_i85l1")]
position = Vector2(-16, 48)
target_node = NodePath("../objPlayer")

[node name="Saves" type="Node" parent="Room_related"]

[node name="objSavePoint2" parent="Room_related/Saves" instance=ExtResource("11_tnmim")]
position = Vector2(1072, 800)

[node name="objSavePoint" parent="Room_related/Saves" instance=ExtResource("11_tnmim")]
position = Vector2(1360, 560)

[node name="objSaveBlocker" parent="Room_related/Saves" instance=ExtResource("7_8iwgr")]
position = Vector2(1264, 560)

[node name="objSavePoint3" parent="Room_related/Saves" instance=ExtResource("11_tnmim")]
position = Vector2(64, 176)

[node name="Gimmicks" type="Node2D" parent="."]

[node name="Walls" parent="Gimmicks" instance=ExtResource("5_qw46x")]
layer_0/tile_data = PackedInt32Array(1179683, 0, 2, 1179684, 0, 2, 1179685, 0, 2, 1179686, 0, 2, 1179687, 0, 2, 1179688, 0, 2, 1179689, 0, 2, 1179691, 0, 2, 1179690, 0, 2, 1179682, 0, 2, 1179681, 0, 2, 1179680, 0, 2)

[node name="Walls2" parent="Gimmicks" instance=ExtResource("5_qw46x")]
modulate = Color(0.286275, 0.384314, 1, 1)
layer_0/tile_data = PackedInt32Array(786431, 0, 2, 720895, 0, 2, 655359, 0, 2, 589823, 0, 2, 524287, 0, 2, 458751, 0, 2, 393215, 0, 2, 327679, 0, 2, 262143, 0, 2, 196607, 0, 2, 131071, 0, 2, 65535, 0, 2, -65536, 0, 2, -65535, 0, 2, -65534, 0, 2, -65533, 0, 2, -65532, 0, 2, 917503, 0, 2, 983039, 0, 2, 1048575, 0, 2, 1114111, 0, 2, 1179647, 0, 2, 1245183, 0, 2, -65531, 0, 2, -65530, 0, 2, -65529, 0, 2, -65528, 0, 2, -65527, 0, 2, -65526, 0, 2, -65525, 0, 2, -65524, 0, 2, -65523, 0, 2, -65522, 0, 2, -65521, 0, 2, -65520, 0, 2, -65519, 0, 2, -65518, 0, 2, -65517, 0, 2, -65516, 0, 2, -65515, 0, 2, -65514, 0, 2, -65513, 0, 2, -65512, 0, 2, 851967, 0, 2, -1, 0, 2, 720962, 0, 2, 720964, 0, 2, 655427, 0, 2, 655428, 0, 2, 1245184, 0, 2, 1245185, 0, 2, 1245186, 0, 2, 1245187, 0, 2, 1245188, 0, 2, 1245189, 0, 2, 1245190, 0, 2, 1245191, 0, 2, 1245192, 0, 2, 1245193, 0, 2, 1245194, 0, 2, 1245195, 0, 2, 1245196, 0, 2, 1245197, 0, 2, 1245198, 0, 2, 1245199, 0, 2, 1245200, 0, 2, 1245201, 0, 2, 1245202, 0, 2, 1245203, 0, 2, 1245204, 0, 2, 1245205, 0, 2, 1245206, 0, 2, 1245207, 0, 2, 1245208, 0, 2, 1114137, 0, 2, 1179673, 0, 2, 524354, 0, 2, 589890, 0, 2, 655426, 0, 2, 655429, 0, 2, 589893, 0, 2, 524357, 0, 2)

[node name="TilesGo_Up_Down" parent="Gimmicks" instance=ExtResource("5_qw46x")]
layer_0/tile_data = PackedInt32Array(458752, 131072, 0, 458753, 131072, 0, 458754, 0, 0, 458755, 196608, 0, -65531, 0, 0, 5, 196608, 0, 65541, 65536, 0, 131077, 0, 0, 196613, 65536, 0, 458759, 0, 0, 393223, 65536, 0, 327687, 131072, 0, 262152, 65536, 0, 196616, 131072, 0, 655369, 131072, 0, 655368, 196608, 0, 655367, 196608, 0, 655366, 131072, 0, 655365, 0, 0, 655364, 65536, 0, 720899, 0, 0, 786435, 196608, 0, 786434, 0, 0, 786433, 131072, 0, 786432, 65536, 0, 786438, 65536, 0, 851975, 131072, 0, 851976, 196608, 0, 851977, 131072, 0, 851978, 131072, 0, 786443, 196608, 0, 786444, 196608, 0, 720909, 131072, 0, 655373, 131072, 0, -131067, 65536, 0, -196603, 0, 0, -262139, 65536, 0, -327675, 196608, 0, 655374, 131072, 0, 655375, 196608, 0, 655376, 65536, 0, 655377, 65536, 0, 655378, 131072, 0, 655379, 0, 0, 655380, 0, 0, 655381, 65536, 0, 655382, 0, 0, 655383, 131072, 0, 458775, 131072, 0, 393239, 131072, 0, 327703, 65536, 0, 262167, 65536, 0, 196631, 0, 0, 131095, 0, 0, 65559, 0, 0, 23, 65536, 0, 458776, 65536, 0, 458777, 196608, 0, 524313, 0, 0, 589849, 131072, 0, 655385, 0, 0, 720919, 196608, 0, 786455, 131072, 0, 851991, 131072, 0, 851992, 196608, 0, 851993, 196608, 0, 655386, 131072, 0, 655387, 65536, 0, 720923, 0, 0, 786459, 196608, 0, 851995, 131072, 0, 917529, 0, 0, 983065, 131072, 0, 1048601, 65536, 0, 1048602, 131072, 0, 1048603, 196608, 0, 851996, 131072, 0, 851997, 65536, 0, 917533, 0, 0, 983069, 131072, 0, 1048605, 0, 0, 1114139, 131072, 0, 1179675, 196608, 0, 1245211, 131072, 0, 1245212, 196608, 0, 1245213, 196608, 0, 1048606, 131072, 0, 1048607, 65536, 0, 1114143, 196608, 0, 1179679, 65536, 0, 1245215, 65536, 0, 1310749, 65536, 0, 1376285, 196608, 0, 1441821, 196608, 0, 1441822, 0, 0, 1441823, 196608, 0, 1245216, 0, 0, 1245217, 131072, 0, 1245218, 65536, 0, 1245219, 0, 0, 1441827, 131072, 0, 1441828, 0, 0, 1441829, 0, 0, 1703971, 131072, 0, 1703970, 65536, 0, 1703969, 0, 0, 1703968, 0, 0, 1703967, 131072, 0, 1638431, 131072, 0, 1572895, 0, 0, 1507359, 131072, 0, 1507363, 196608, 0, 1572899, 196608, 0, 1638435, 196608, 0, 1769507, 131072, 0, 1769506, 131072, 0, 1769505, 65536, 0, 1769504, 131072, 0, 1769503, 65536, 0, 1507358, 196608, 0, 1572894, 65536, 0, 1638430, 131072, 0, 1703966, 131072, 0, 1769502, 131072, 0, 1769508, 196608, 0, 1703972, 0, 0, 1638436, 0, 0, 1572900, 0, 0, 1507364, 196608, 0, 1507357, 196608, 0, 1507365, 0, 0, 1441830, 65536, 0, -65513, 131072, 0, -131049, 131072, 0, -196585, 65536, 0, -262121, 131072, 0, -327657, 196608, 0, 1376294, 65536, 0, 1310758, 0, 0, 1310759, 65536, 0, 1310760, 65536, 0, 1310761, 65536, 0, 1310762, 65536, 0, 1310763, 131072, 0, 1310764, 65536, 0, 1310765, 131072, 0, 1310766, 131072, 0, 1245230, 196608, 0, 1179694, 0, 0, 1114158, 65536, 0, 1048622, 65536, 0, 1048623, 196608, 0, 1048624, 65536, 0, 1048625, 196608, 0, 983088, 65536, 0, 917552, 65536, 0, 983087, 65536, 0, 983089, 131072, 0, 917553, 65536, 0, 852017, 196608, 0, 917551, 131072, 0, 852016, 65536, 0, 786480, 0, 0, 786481, 196608, 0, 720945, 131072, 0, 655409, 131072, 0, 393241, 0, 0, 327705, 196608, 0, 262169, 196608, 0, 196633, 196608, 0, 131097, 131072, 0, 65561, 65536, 0, 25, 196608, 0, 655410, 0, 0, 589874, 0, 0, 589875, 196608, 0, 524340, 0, 0, 327731, 196608, 0, 327732, 0, 0, 458804, 196608, 0, 458805, 0, 0, 458806, 196608, 0, 393270, 196608, 0, 327734, 196608, 0, 262196, 131072, 0, 196660, 0, 0, 196661, 65536, 0, 196662, 65536, 0, 196664, 65536, 0, 196663, 131072, 0, 262200, 131072, 0, 327736, 0, 0, 393272, 131072, 0, 458808, 0, 0, 524344, 131072, 0, 589880, 65536, 0, 589879, 65536, 0, 589878, 196608, 0, 655414, 131072, 0, 655413, 196608, 0, 720949, 65536, 0, 720948, 131072, 0, 786484, 0, 0, 720946, 131072, 0, 786482, 65536, 0, 852018, 65536, 0, 917554, 0, 0, 917555, 196608, 0, 917556, 0, 0, 917557, 0, 0, 917558, 131072, 0, 852022, 131072, 0, 852023, 65536, 0, 786487, 65536, 0, 786488, 131072, 0, 720952, 0, 0, 720953, 196608, 0, 655418, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 196608, 0, 589886, 131072, 0, 589887, 0, 0, 589888, 0, 0, 589889, 65536, 0, 589895, 131072, 0, 589894, 196608, 0, 589890, 0, 0, 655430, 131072, 0, 720966, 196608, 0, 655426, 196608, 0, 720962, 131072, 0, 720961, 131072, 0, 720960, 196608, 0, 720959, 196608, 0, 720958, 131072, 0, 720957, 196608, 0, 720956, 131072, 0, 720955, 196608, 0, 720954, 196608, 0, 786489, 0, 0, 786490, 131072, 0, 786491, 0, 0, 786492, 0, 0, 786493, 0, 0, 786494, 131072, 0, 786495, 131072, 0, 786496, 196608, 0, 786497, 0, 0, 655425, 131072, 0, 655424, 131072, 0, 655423, 131072, 0, 655422, 65536, 0, 655421, 0, 0, 655420, 131072, 0, 655419, 131072, 0, 917559, 0, 0, 983095, 196608, 0, 983094, 65536, 0, 983093, 131072, 0, 983092, 0, 0, 983091, 0, 0, 983090, 65536, 0, 852024, 196608, 0, 262195, 196608, 0, 196658, 131072, 0, 131122, 196608, 0, 65586, 131072, 0, 50, 196608, 0, -65486, 196608, 0, 196659, 131072, 0, 131123, 131072, 0, 524359, 196608, 0, 458823, 0, 0, 393287, 65536, 0, 327751, 0, 0, 262215, 131072, 0, 196679, 65536, 0, 131143, 65536, 0, 65607, 65536, 0, 71, 131072, 0, -65465, 0, 0, -131001, 196608, 0, -196537, 131072, 0, -262073, 196608, 0, -327609, 196608, 0, 655431, 131072, 0, 786502, 131072, 0, 589893, 196608, 0, 655429, 0, 0, 720965, 0, 0, 720964, 131072, 0, 720963, 0, 0, 655427, 131072, 0, 655428, 131072, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Gimmicks"]
libraries = {
"": SubResource("AnimationLibrary_witi7")
}

[node name="MarioGroup" type="RigidBody2D" parent="Gimmicks"]
position = Vector2(2176, 320)
collision_layer = 8
gravity_scale = 0.0
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Hitbox" type="CollisionShape2D" parent="Gimmicks/MarioGroup"]
position = Vector2(0, -92)
scale = Vector2(0.625691, 0.625691)
shape = SubResource("RectangleShape2D_axrny")
debug_color = Color(0.884641, 0.294163, 0.409854, 0.42)

[node name="Mario" type="Sprite2D" parent="Gimmicks/MarioGroup"]
position = Vector2(0, -80)
scale = Vector2(0.625691, 0.625691)
texture = ExtResource("7_qjd0l")

[node name="BulletDetector" type="Area2D" parent="Gimmicks/MarioGroup/Mario"]
position = Vector2(0, 127.859)
scale = Vector2(1.59823, 1.59823)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gimmicks/MarioGroup/Mario/BulletDetector"]
position = Vector2(0, -116)
shape = SubResource("RectangleShape2D_ihoti")
debug_color = Color(0.813089, 0.313625, 0.672486, 0.42)

[node name="Pipe" type="Sprite2D" parent="Gimmicks/MarioGroup"]
z_index = 3
texture = ExtResource("8_no0qn")

[node name="PipeSFX" type="AudioStreamPlayer" parent="Gimmicks/MarioGroup"]
stream = ExtResource("9_nn47s")
bus = &"Sounds"

[node name="Area2D" type="Area2D" parent="Gimmicks/MarioGroup"]
position = Vector2(16, 0)
collision_layer = 0
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gimmicks/MarioGroup/Area2D"]
position = Vector2(-192, -16)
shape = SubResource("RectangleShape2D_k5bm6")

[node name="Polygon2D" type="Polygon2D" parent="Gimmicks/MarioGroup/Area2D"]
color = Color(0.811765, 0.270588, 0.490196, 1)
invert_enabled = true
invert_border = 5.5
polygon = PackedVector2Array(-592, 288, 208, 288, 208, -320, -592, -320, -592, 288)

[node name="MarioAnimation" type="AnimationPlayer" parent="Gimmicks/MarioGroup"]
libraries = {
"": SubResource("AnimationLibrary_injlh")
}

[node name="MarioDisappear" type="AudioStreamPlayer" parent="Gimmicks/MarioGroup"]
stream = ExtResource("12_l5gpi")
bus = &"Sounds"

[node name="tilSpikes" parent="Gimmicks" instance=ExtResource("10_b0wgw")]
layer_0/tile_data = PackedInt32Array(589840, 65536, 0, 589844, 65536, 0, 589845, 65536, 0)

[node name="tilSpikes_Offset" parent="Gimmicks" instance=ExtResource("10_b0wgw")]
position = Vector2(0, -8)
layer_0/tile_data = PackedInt32Array(1245223, 0, 0, 1245225, 0, 0, 1245227, 0, 0)

[node name="objWarpNextStage" parent="Gimmicks" instance=ExtResource("13_hhmne")]
position = Vector2(2176, 304)
scale = Vector2(3, 1)
warp_to = "res://Rooms/rNeosStage04.tscn"
next_stage_number = 4

[node name="WarpTroll" parent="Gimmicks" instance=ExtResource("13_hhmne")]
position = Vector2(160, 520)
warp_to = "res://Rooms/rNeosStage03.tscn"
next_stage_number = 3

[node name="Label" type="Label" parent="Gimmicks/WarpTroll"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -43.0
offset_top = -44.0
offset_right = 43.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 2
text = "Skip stage????????????????????????????"
horizontal_alignment = 1

[node name="Hazards" type="Node2D" parent="."]

[node name="Trigger_related" type="Node2D" parent="."]

[node name="objTrigger" parent="Trigger_related" instance=ExtResource("15_ldk0h")]
position = Vector2(144, 504)
trigger_id = 1

[connection signal="body_entered" from="Gimmicks/MarioGroup/Mario/BulletDetector" to="." method="_on_bullet_detector_body_entered"]
[connection signal="body_entered" from="Gimmicks/MarioGroup/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Gimmicks/MarioGroup/Area2D" to="." method="_on_area_2d_body_exited"]
